Added httponly settings and credentials to CORS systems
